--- a/Cursos2/WebContent/html/registro.html
+++ b/Cursos2/WebContent/html/registro.html
@@ -12,8 +12,29 @@ and open the template in the editor.
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
    <body>
-   <div class="form-group">
-<form  action="/Cursos2/Registro" method="get">
+           <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+  <a class="navbar-brand" href="#">Cursos</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+    <div class="collapse navbar-collapse mr-auto float-right" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      
+      <li class="nav-item">
+          <a class="nav-link" href="login.html">Login</a>
+      </li>
+<li class="nav-item">
+        <a class="nav-link" href="registro.html">Sign in</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="oferta.html">Oferta cursos</a>
+      </li>
+    </ul>
+      
+  </div>
+   </nav>
+
+<form action="/Cursos2/Registro" method="get" style="margin: 0 auto; width: 500px;">
   <div class="form-group">
     <label for="exampleInputNombre">Usuario</label>
     <input name="name" type="text" class="form-control" id="exampleInputNombre" aria-describedby="emailHelp" placeholder="Enter user" required="" pattern="/^[a-Z]{3,16}$/">
@@ -29,7 +50,7 @@ and open the template in the editor.
 
   <button type="submit" class="btn btn-primary">Registrarse</button>
 </form>
-  </div>
+ 
   
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
