--- a/Cursos2/WebContent/html/registroIncorrecto.html
+++ b/Cursos2/WebContent/html/registroIncorrecto.html
@@ -12,6 +12,28 @@ and open the template in the editor.
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
    <body>
+   	<nav class="navbar navbar-expand-lg navbar-light bg-light ">
+		<a class="navbar-brand" href="#">Cursos</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse"
+			data-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false"
+			aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse mr-auto float-right"
+			id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+
+				<li class="nav-item"><a class="nav-link" href="login.html">Login</a>
+				</li>
+				<li class="nav-item"><a class="nav-link" href="registro.html">Sign
+						in</a></li>
+				<li class="nav-item"><a class="nav-link" href="oferta.html">Oferta
+						cursos</a></li>
+			</ul>
+
+		</div>
+	</nav>
        <h1>REGISTRO INCORRECTO!</h1>
   
   
