Solucionado warning alt attribute en img tag

--- a/Cursos2/WebContent/html/oferta.html
+++ b/Cursos2/WebContent/html/oferta.html
@@ -45,27 +45,27 @@ and open the template in the editor.
 
 				<label class="form-check-label" for="defaultCheck1"
 					style="text-align: center; vertical-align: middle;"> <img
-					src="img_cursos/captura.jpg" width="150" height="150" /> <input
+					src="img_cursos/captura.jpg" width="150" height="150" alt="oferta1" /> <input
 					class="form-check-input" type="checkbox" name="Curso1" value="Curso1"
 					id="Curso1">
 				</label> <label class="form-check-label" for="defaultCheck1"
 					style="text-align: center; vertical-align: middle;"> <img
-					src="img_cursos/cursos-black-friday.png" width="150" height="150" />
+					src="img_cursos/cursos-black-friday.png" width="150" height="150" alt="oferta2"/>
 					<input class="form-check-input" type="checkbox" name="Curso2" value="Curso2"
 					id="Curso2">
 				</label> <label class="form-check-label" for="defaultCheck1"
 					style="text-align: center; vertical-align: middle;"> <img
-					src="img_cursos/cursos-cyber-monday.png" width="150" height="150" />
+					src="img_cursos/cursos-cyber-monday.png" width="150" height="150" alt="oferta3"/>
 					<input class="form-check-input" type="checkbox" name="Curso3" value="Curso3"
 					id="Curso3">
 				</label> <label class="form-check-label" for="defaultCheck1"
 					style="text-align: center; vertical-align: middle;"> <img
-					src="img_cursos/halloween.jpg" width="150" height="150" /> <input
+					src="img_cursos/halloween.jpg" width="150" height="150" alt="oferta4"/> <input
 					class="form-check-input" type="checkbox" name="Curso4" value="Curso4"
 					id="Curso4">
 				</label> <label class="form-check-label" for="defaultCheck1"
 					style="text-align: center; vertical-align: middle;"> <img
-					src="img_cursos/images.png" width="150" height="150" /> <input
+					src="img_cursos/images.png" width="150" height="150" alt="oferta5"/> <input
 					class="form-check-input" type="checkbox" name="Curso5" value="Curso5"
 					id="Curso5">
 				</label>
